--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
+        "simplesoftwareio/simple-qrcode": "^4.2",
+        "symfony/http-client": "^7.3",
+        "symfony/postmark-mailer": "^7.3",
         "vonage/client": "^4.1"
     },
     "require-dev": {
