--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "simplesoftwareio/simple-qrcode": "^4.2",
         "symfony/http-client": "^7.3",
         "symfony/postmark-mailer": "^7.3",
-        "vonage/client": "^4.1"
+        "vonage/client": "^4.1",
+        "yajra/laravel-datatables": "^12.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
